# deepflow

./: README.md  pyproject.toml  setup.py
.github/workflows/: Workflow.yml
deepflow/: __init__.py  _api.py  activation.py  cli.py  datasets.py  gui.py  layers.py  optimisers.py
deepflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deepflow/utils/: lazy_loader.py
src/deepflow/: losses.py  optimisers.py  sequential.py
