[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

[project]
name = "deepflow"

[project]
version = "1.6.0"

[project]
requires-python = ">= 3.8"

[project.scripts]
df-cli = "deepflow:*"

[project.gui-scripts]
spam-gui = "deepflow:*"

[project]
authors = [
  {name = "Aaha3"},

]
maintainers = [
  {name = "Aaha3"}
]

[project]
description = "deepflow is a neural network made in python."

[project]
readme = "README.md"

[project]
license = {file = "LICENSE"}

[project]
keywords = ["neural network", "ai", "ai model"]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: neural networking tool",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: Apache License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[project.urls]
Homepage = "https://deepflow-cognit.github.io/deepflow-cognit.org/"
Documentation = "(Documentation is located in docstring)"
Repository = "https://github.com/deepflow-cognit/deepflow"
Issues = "https://github.com/deepflow-cognit/deepflow/issues"